--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.95.3",
     "dotenv": "^16.4.5"
   }
